--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "description": "Web Interface for Openvpn3",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "restify": "^8.5.1",
     "shelljs": "^0.8.4"
   },
